# sbs-client

./: .gitignore  CMakeLists.txt  sbs-client.pc.in
src/lib/: sbs-client.hpp  sbs-client.queryBuilder.cpp  sbs-client.raw.cpp  sbs-client.squad.cpp  sbs-client.user.cpp
